@@ -82,10 +82,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.13</version>
-				<configuration>
-					<argLine>-Xmx2048M -Dfile.encoding=UTF-8</argLine>
-				</configuration>
+                <version>2.20</version>
+                <configuration>
+                    <forkCount>2</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024M -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
